objects/Test_Result__c.object
<CustomObject>
    <fields>
        <fullName>Data_Category__c</fullName>
        <label>Data Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to send</fullName>
                </value>
                <value>
                    <fullName>kit sent</fullName>
                </value>
                <value>
                    <fullName>Kits not received in 30 days</fullName>
                </value>
                <value>
                    <fullName>subscription</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Kits Delivered</fullName>
                </value>
                <value>
                    <fullName>Kits returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Name__c</fullName>
        <label>Data Name</label>
        <length>99</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Value__c</fullName>
        <label>Data Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Result</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Test results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>